[package]
name = "uppy"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard-win = "5.3.1"
lazy_static = "1.4.0"
md-5 = "0.10.6"
reqwest = { version = "0.12.4", features = ["blocking", "multipart"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[[bin]]
name = "uppy"
path = "src/main.rs"
